# ALEA-release

./: MIT.txt  README  README.md
src/: Makefile.in  configure  configure.ac
src/config/: arm_ina231.def  x86_rapl.conf  x86_rapl.def
src/kernel/: Makefile.in  alea.c  alea.h  alea_common.c  alea_common.h  alea_ptrace.c  alea_ptrace.h  alea_set_options.c  alea_threads.c  alea_threads.h
src/kernel/power/: power_iface.h
src/kernel/power/ina231/: Makefile.in  ina231.c  ina231.h
src/kernel/power/rapl/: Makefile.in  rapl.c  rapl.h
src/kernel/sample/: Makefile.in  alea_sample.c  alea_sample.h
src/kernel/sample/arm/: Makefile.in  alea_arm.c  alea_arm.h
src/kernel/sample/x86/: Makefile.in  alea_arch_iface.h  alea_x86.c  alea_x86.h
src/scripts/: Makefile.in  alea_bb_info.py  alea_build_stat.scr  alea_build_stat_arch.py
